# ChangeLog for dev-util/bugle
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-util/bugle/Attic/ChangeLog,v 1.11 2010/01/08 15:05:33 ssuominen Exp $

  08 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
  bugle-0.0.20090801.ebuild, +files/bugle-0.0.20090801-asneeded.patch:
  Fix building with -Wl,--as-needed wrt #297638, thanks to Kacper Kowalik
  for patch.

*bugle-0.0.20090801 (22 Aug 2009)

  22 Aug 2009; Tomáš Chvátal <scarabeus@gentoo.org>
  -bugle-0.0.20080803.ebuild, +bugle-0.0.20090801.ebuild:
  Version bump. Remove old. Due to bug #247219.

  31 Jan 2009; <jokey@gentoo.org> bugle-0.0.20080803.ebuild:
  Add dependency for bug 254940 and temporarily -j1 to emake until a
  solution exists for bug 247219

*bugle-0.0.20080803 (25 Aug 2008)

  25 Aug 2008; Markus Ullmann <jokey@gentoo.org> +bugle-0.0.20080803.ebuild:
  Version bump wrt bug #235492 thanks to Dennis Schridde for the
  notification

*bugle-0.0.20080303 (10 Aug 2008)

  10 Aug 2008; Markus Ullmann <jokey@gentoo.org> +bugle-0.0.20080303.ebuild:
  Version bump wrt bug #228029

  10 Aug 2008; Markus Ullmann <jokey@gentoo.org> -bugle-0.0.20070718.ebuild,
  bugle-0.0.20071009.ebuild:
  Add virtual/opengl for bug #227859 ; and drop autotools dep and old ebuild

*bugle-0.0.20071009 (29 Oct 2007)

  29 Oct 2007; Markus Ullmann <jokey@gentoo.org> -bugle-0.0.20070325.ebuild,
  +bugle-0.0.20071009.ebuild:
  Version bump

  18 Sep 2007; Markus Ullmann <jokey@gentoo.org> bugle-0.0.20070718.ebuild:
  QA improvement

*bugle-0.0.20070718 (17 Sep 2007)

  17 Sep 2007; Markus Ullmann <jokey@gentoo.org> +bugle-0.0.20070718.ebuild:
  Version bump wrt bug #191684

  31 May 2007; Daniel Gryniewicz <dang@gentoo.org>
  bugle-0.0.20070325.ebuild:
  Marked ~amd64 for bug #177783

*bugle-0.0.20070325 (26 Mar 2007)

  26 Mar 2007; Markus Ullmann <jokey@gentoo.org> +metadata.xml,
  +bugle-0.0.20070325.ebuild:
  Initial import for bug #143835
