@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/bugle
-# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/bugle/Attic/ChangeLog,v 1.11 2010/01/08 15:05:33 ssuominen Exp $
+# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-util/bugle/Attic/ChangeLog,v 1.12 2011/03/23 16:50:55 ssuominen Exp $
+
+  23 Mar 2011; Samuli Suominen <ssuominen@gentoo.org>
+  bugle-0.0.20090801.ebuild:
+  Use SLOT dependencies for x11-libs/gtk+.
 
   08 Jan 2010; Samuli Suominen <ssuominen@gentoo.org>
   bugle-0.0.20090801.ebuild, +files/bugle-0.0.20090801-asneeded.patch:
